fixed panel visibility issue when redrawing

--- a/logging/client/observatory.less
+++ b/logging/client/observatory.less
@@ -320,6 +320,10 @@ tr.no_border,
   //bottom: 0;
 }
 
+.lb_hidden {
+  display: none;
+}
+
 .observatory_panel {
 	//overflow: scroll;
 	width: 90%;
